# librarr

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  Procfile  README.md  ROADMAP.md  alembic.ini  pyproject.toml
.claude/agents/: arr-specialist.md  implementer.md  librarian.md  reviewer.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_grabs_table.py
app/: main.py
app/api/: errors.py
app/core/: cache_keys.py  config.py  crypto.py  db.py  deps.py  exceptions.py  logging.py
app/integrations/: exceptions.py
app/models/: __init__.py  activity_log.py  associations.py  author.py  base.py  book.py  download.py  edition.py  grab.py  integration_config.py  metadata_cache.py  quality_profile.py  series.py  setting.py
app/repositories/: author.py  book.py  edition.py  integration_config.py
app/schemas/: author.py  book.py  command.py  common.py  edition.py  grab.py  metadata.py  prowlarr.py  qbittorrent.py  quality.py  release.py
app/services/: book_service.py  grab_service.py  metadata.py  prowlarr_service.py  qbittorrent_service.py  release_scoring.py  release_search_service.py
docs/: DEVELOPMENT.md  FOLLOWUPS.md
tests/: conftest.py
tests/integration/: test_book_api.py  test_book_search.py  test_cloud_client.py  test_grab_endpoint.py  test_integrations_api.py  test_models.py  test_network_smoke.py  test_openlibrary_client.py  test_prowlarr_client.py  test_prowlarr_settings_api.py  test_prowlarr_settings_service.py  (+4 more)
web/: .env.local.example  FOLLOWUPS.md  package-lock.json  package.json
(+90 files in other folders)
