[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "librarr"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "structlog>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
    "uuid-utils>=0.14.1",
    "cryptography>=47.0.0",
    "greenlet>=3.4.0",
    "tenacity>=9.1.4",
    "python-dateutil>=2.9.0.post0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "types-python-dateutil>=2.9.0.20260408",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not network'"
markers = ["network: requires live network access, skipped by default"]
